# vnstock-api

./: .cursorrules  .env.example  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  serverless.yml  vercel.json
.cursor/rules/: project-rules.mdc  structure-rules.mdc
app/: main.py
app/api/graphql/: __init__.py  schema.py  types.py
app/api/rest/v1/: __init__.py  companies.py  market.py  stocks.py
app/core/: __init__.py  config.py  exceptions.py  response.py
app/datasources/: __init__.py  base.py  company_datasource.py  factory.py
app/datasources/tcbs/: __init__.py  company.py  financial.py  listing.py
app/datasources/vci/: __init__.py  company.py  financial.py  listing.py
app/models/schemas/: company.py  listing.py  response.py
app/services/: company_service.py  financial_service.py  listing_service.py
app/tests/: test_client.py
docs/api/: datasource-abstraction.md  graphql-structure.md  rest-structure.md
docs/datasources/: tcbs-apis.md  vci-apis.md
docs/datasources/sample-data/tcbs/: balance_sheet.json  cash_flow.json  company_events.json  company_news.json  company_officers.json  company_overview.json  company_profile.json  (+10 more)
docs/implementation/: README.md
docs/implementation/adapters/: vnstock_adapter.md
docs/implementation/datasources/: financial_datasource.md  vnstock_adapter.md
docs/implementation/services/: company_service.md
docs/memory_bank/: companies_api_implementation.md  debug_fixes.md
examples/: company-example.md  company-example.py  financial-example.md  financial-example.py  listing-example.md  listing-example.py  quote-example.md  quote-example.py  screener-example.md  screener-example.py  trading-example.md  trading-example.py  utils.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
memory-bank/implementation/: README.md  main.md
memory-bank/implementation/core/: config.md  exceptions.md
memory-bank/implementation/datasources/: README.md  company_datasource.md  listing_datasource.md  quote_datasource.md  screener_datasource.md  trading_datasource.md  vnstock-data-explorer.md
memory-bank/implementation/infrastructure/: deployment.md
memory-bank/implementation/models/: company.md
memory-bank/implementation/services/: listing_service.md
scripts/: test.py
tests/: conftest.py  test_listing_datasource.py
tests/unit/: test_main.py
(+38 files in other folders)
