[project]
name = "vnstock-api"
version = "0.1.0"
description = "API wrapper for vnstock library providing both REST and GraphQL APIs"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
